<resources>
    <string name="app_name">Serverless BBS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="action_bss_thread_add">Add Thread</string>

    <string name="tab_all">"ALL"</string>
    <string name="tab_unread">"UNREAD"</string>
    <string name="tab_follow">"FOLLOW"</string>

    <string name="label_bbs_thread_detail">"BBS Thread Name"</string>
    <string name="label_bbs_thread_create">"Create BBS Thread"</string>
    <string name="label_new_bbs_thread_name">"New bbs thread name"</string>
    <string name="label_new_bbs_thread_description">"New bbs thread description"</string>
    <string name="label_new_bbs_thread_color">"New bbs thread color"</string>
    <string name="label_enter_new_bbs_thread_name">"Enter a bbs thread name."</string>
    <string name="label_enter_new_bbs_thread_description">"Enter a bbs thread description."</string>

    <string-array name="color_palette_array">
        <item>mintcream</item>
        <item>aliceblue</item>
        <item>ivory</item>
        <item>beige</item>
        <item>seashell</item>
        <item>lavender</item>
    </string-array>
</resources>