<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screen.bbs_thread.BbsThreadCreateFragment">

    <TextView
        android:id="@+id/text_new_bbs_thread_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        android:text="@string/label_new_bbs_thread_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/edit_new_bbs_thread_name"
        android:hint="@string/label_enter_new_bbs_thread_name"
        android:inputType="text"
        android:maxLength="30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_new_bbs_thread_name" />
    <TextView
        android:id="@+id/text_new_bbs_thread_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="15dp"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        android:text="@string/label_new_bbs_thread_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_new_bbs_thread_name" />
    <EditText
        android:id="@+id/edit_new_bbs_thread_description"
        android:hint="@string/label_enter_new_bbs_thread_description"
        android:inputType="textMultiLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="4"
        android:maxLength="80"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_new_bbs_thread_description" />
    <TextView
        android:id="@+id/text_new_bbs_thread_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="15dp"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        android:text="@string/label_new_bbs_thread_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_new_bbs_thread_description" />
    <TextView
        android:id="@+id/box_new_bbs_thread_color"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/gray_50"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_new_bbs_thread_color" />
    <Spinner
        android:id="@+id/spinner_new_bbs_thread_color"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        android:text="@string/label_new_bbs_thread_color"
        app:layout_constraintStart_toEndOf="@id/box_new_bbs_thread_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_new_bbs_thread_color" />

</androidx.constraintlayout.widget.ConstraintLayout>